# maven-artifact

./: .envrc  .gitignore  MANIFEST.in  README.md  README.rst  build.sh  clean.sh  pyproject.toml  release.sh  setup.py
.github/workflows/: linting.yml  pypi-build-n-publish.yml
maven/: Requestor.py  __init__.py  artifact.py  downloader.py  requestor.py  resolver.py  resolver2.py
src/maven_artifact/: __init__.py  artifact.py  downloader.py  main.py  requestor.py  resolver.py  utils.py
tests/integration/maven_artifact/: test_downloader.py  test_resolver.py
tests/unit/maven_artifact/: test_artifact.py
